--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
             <p>&copy; 2024 Nna Miracle C.. All rights reserved. Built with HTML & Tailwind CSS.</p>
         </div>
     </footer>
+    <!-- Final small change to force GitHub Pages deployment -->
 
 </body>
 </html>
