Update2 index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Applied backdrop-blur-md and changed to semi-transparent background (bg-white/90) for frosted glass effect -->
         <section id="hero" class="text-center py-20 bg-white/90 backdrop-blur-md rounded-xl shadow-2xl border-b-4 border-blue-500">
             <div class="flex justify-center mb-6">
-                <!-- PHOTO UPDATED to a placeholder URL (MC) so it displays correctly outside the editor -->
+                <!-- Using a generic placeholder image -->
                 <img src="https://placehold.co/144x144/3B82F6/ffffff?text=MC" alt="Miracle C. Placeholder Photo"
                     class="rounded-full w-36 h-36 object-cover border-4 border-blue-500 shadow-md">
             </div>
@@ -165,7 +165,7 @@
             <h3 class="text-4xl font-bold text-gray-800 mb-8 border-l-4 border-blue-500 pl-4">Featured Projects</h3>
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 
-                <!-- Project Card 1: LINUX FILE PERMISSIONS AUDIT - UPDATED -->
+                <!-- Project Card 1: LINUX FILE PERMISSIONS AUDIT - FIXED LINK -->
                 <div class="bg-white rounded-xl shadow-xl overflow-hidden transform hover:scale-[1.02] transition duration-300 border-t-8 border-green-600">
                     <div class="p-6">
                         <h4 class="text-2xl font-bold text-gray-900 mb-2">Linux Access Control Hardening (CLI)</h4>
@@ -177,7 +177,7 @@
                             <span class="bg-green-200 text-xs font-semibold px-2 py-0.5 rounded">chmod/ls</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="https://github.com/miracle925" target="_blank"
+                            <a href="File permissions in Linux.pdf" target="_blank"
                                 class="text-blue-600 hover:text-blue-800 font-medium text-sm">
                                 View Documentation →
                             </a>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
 
-                <!-- Project Card 2: SQL LOG ANALYSIS & DATA FILTERING - UPDATED -->
+                <!-- Project Card 2: SQL LOG ANALYSIS & DATA FILTERING - FIXED LINK -->
                 <div class="bg-white rounded-xl shadow-xl overflow-hidden transform hover:scale-[1.02] transition duration-300 border-t-8 border-blue-600">
                     <div class="p-6">
                         <h4 class="text-2xl font-bold text-gray-900 mb-2">Incident Forensics: SQL Log Filtering</h4>
@@ -201,7 +201,7 @@
                             <span class="bg-blue-200 text-xs font-semibold px-2 py-0.5 rounded">Data Forensics</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="https://github.com/miracle925" target="_blank"
+                            <a href="Apply filters to SQL queries.pdf" target="_blank"
                                 class="text-blue-600 hover:text-blue-800 font-medium text-sm">
                                 View Documentation →
                             </a>
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 
-                <!-- Project Card 3: PYTHON FILE UPDATE ALGORITHM - UPDATED -->
+                <!-- Project Card 3: PYTHON FILE UPDATE ALGORITHM - FIXED LINK -->
                 <div class="bg-white rounded-xl shadow-xl overflow-hidden transform hover:scale-[1.02] transition duration-300 border-t-8 border-red-600">
                     <div class="p-6">
                         <h4 class="text-2xl font-bold text-gray-900 mb-2">Security Automation: Python Allow List Manager</h4>
@@ -225,7 +225,7 @@
                             <span class="bg-red-200 text-xs font-semibold px-2 py-0.5 rounded">File I/O</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="https://github.com/miracle925" target="_blank"
+                            <a href="Algorithm for file updates in Python.pdf" target="_blank"
                                 class="text-blue-600 hover:text-blue-800 font-medium text-sm">
                                 View Documentation →
                             </a>
